# neural-retail-ai

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
models/: churn_model.pkl  kmeans.pkl
src/: test_ingestion.py
src/config/: config.py
src/data/: ingestion.py  preprocessing.py  validation.py
src/features/: build_features.py
src/models/: save_model.py  train_churn.py  train_segmentation.py
