[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-retail-ai"
version = "0.1.0"
description = "AI-powered customer segmentation and churn prediction system"
authors = [
    { name = "Bibhuprasad Bhattacharjee" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "xgboost==2.0.3",
    "matplotlib==3.9.0",
    "plotly==5.22.0",
    "streamlit==1.36.0",
    "joblib==1.4.2"
]

[tool.setuptools.packages.find]
where = ["src"]